[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "playwright-python"
version = "0.1.0"
description = "Playwright Python example project with pytest and Allure report"
authors = [{ name = "nirtal85", email = "nirt236@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
keywords = [
    "playwright",
    "automation",
    "testing",
    "web",
]
dependencies = [
    "allure-pytest==2.13.5",
    "axe-playwright-python==0.1.4",
    "playwright==1.51.0",
    "pytest==8.3.5",
    "pytest-base-url==2.1.0",
    "pytest-playwright==0.7.0",
    "pytest-split==0.10.0",
    "requests==2.32.3",
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "isort==6.0.1",
    "pre-commit==4.2.0",
]

[tool.isort]
profile = "black"
skip = ["env", "venv"]

[tool.hatch.build.targets.sdist]
include = ["playwright_python"]

[tool.hatch.build.targets.wheel]
include = ["playwright_python"]

[tool.pytest.ini_options]
addopts = [
  "--clean-alluredir",
  "--alluredir=allure-results",
  "--allure-link-pattern",
  "issue:https://{}",
  "--allure-link-pattern",
  "link:https://{}",
  "--allure-link-pattern",
  "tms:https://{}",
  "-ra",
  "--color=yes",
  "--browser-channel=chrome",
  "--headed",
  "--video=retain-on-failure",
  "--tracing=retain-on-failure"
]
base_url = 'https://www.saucedemo.com/'
log_cli = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_level = "INFO"
markers = [
  "devRun: marks tests that run before merge to the main branch"
]
