[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "ruff==0.11.8",
  "pre-commit==4.2.0"
]

[project]
authors = [{name = "nirtal85", email = "nirt236@gmail.com"}]
dependencies = [
  "allure-pytest==2.14.1",
  "axe-playwright-python==0.1.4",
  "playwright==1.52.0",
  "pytest==8.3.5",
  "pytest-base-url==2.1.0",
  "pytest-playwright==0.7.0",
  "pytest-split==0.10.0",
  "requests==2.32.3"
]
description = "Playwright Python example project with pytest and Allure report"
keywords = [
  "playwright",
  "automation",
  "testing",
  "web"
]
name = "playwright-python"
readme = "README.md"
requires-python = "~=3.11"
version = "0.1.0"

[tool.hatch.build.targets.sdist]
include = ["playwright_python"]

[tool.hatch.build.targets.wheel]
include = ["playwright_python"]

[tool.isort]
profile = "black"
skip = ["env", "venv"]

[tool.pytest.ini_options]
addopts = [
  "--clean-alluredir",
  "--alluredir=allure-results",
  "--allure-link-pattern",
  "issue:https://{}",
  "--allure-link-pattern",
  "link:https://{}",
  "--allure-link-pattern",
  "tms:https://{}",
  "-ra",
  "--color=yes",
  "--browser=chromium",
  "--headed",
  "--video=retain-on-failure",
  "--tracing=retain-on-failure"
]
base_url = 'https://www.saucedemo.com/'
log_cli = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_level = "INFO"
markers = [
  "devRun: marks tests that run before merge to the main branch"
]

[tool.ruff]
exclude = [".venv", "env"]
ignore = [
  "D203",  # One blank line required before class docstring (conflicts with D211)
  "D213",  # Multi-line docstring summary should start at the second line
  "COM812"
]
line-length = 100
select = ["ALL"]
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
